--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ django-celery-beat = "*"
 watchdog = "*"
 ipdb = "*"
 django-appconf = "*"
+pandas = "*"
+django-import-export = "*"
 
 [dev-packages]
 flake8 = "*"
