--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
         restart: on-failure
 
     rabbitmq:
+        restart: always
         image: rabbitmq:3-management-alpine
         ports:
             - 5672:5672
@@ -74,6 +75,7 @@ services:
     #         - rabbitmq
 
     chrome:
+        restart: always
         image: selenium/node-chrome:4.5.0-20221017
         shm_size: 2gb
         depends_on:
@@ -98,6 +100,7 @@ services:
         tty: true
 
     selenium-hub:
+        restart: always
         image: selenium/hub:4.5.0-20221017
         ports:
             - "4442:4442"
