Added changes to use postgresql

--- a/.env.dev
+++ b/.env.dev
@@ -1,8 +1,13 @@
 DEBUG=True
 DEBUG_TOOLBAR_ENABLED=False
 
-DJANGO_PORT=8000
 PYTHONDONTWRITEBYTECODE=1
+DJANGO_PORT=8000
+POSTGRES_DB=prolocksmiths-dev
+POSTGRES_USER=dev
+POSTGRES_PASSWORD=dev
+PGADMIN_DEFAULT_EMAIL=dev
+PGADMIN_DEFAULT_PASSWORD=dev
 
 HEADLESS=False
 WEB_DRIVER_URL=http://selenium-hub:4444/wd/hub
