Fixed wrong database config in settings file

--- a/.env.dev
+++ b/.env.dev
@@ -3,6 +3,12 @@ DEBUG_TOOLBAR_ENABLED=False
 
 PYTHONDONTWRITEBYTECODE=1
 DJANGO_PORT=8000
+DJANGO_SECRET_KEY=prolocksmithsdev
+DJANGO_SUPERUSER_EMAIL=
+DJANGO_SUPERUSER_USERNAME=
+DJANGO_SUPERUSER_PASSWORD=
+HOST=db
+PORT=5432
 POSTGRES_DB=prolocksmiths-dev
 POSTGRES_USER=dev
 POSTGRES_PASSWORD=dev
