Added allowed hosts

--- a/.env.dev
+++ b/.env.dev
@@ -14,6 +14,7 @@ POSTGRES_USER=dev
 POSTGRES_PASSWORD=dev
 PGADMIN_DEFAULT_EMAIL=dev
 PGADMIN_DEFAULT_PASSWORD=dev
+ALLOWED_HOSTS=
 
 HEADLESS=False
 WEB_DRIVER_URL=http://selenium-hub:4444/wd/hub
