Added new report ticket gclid task

--- a/.env.dev
+++ b/.env.dev
@@ -35,3 +35,8 @@ GRID_MAX_SESSION=15
 
 CALLRAIL_ACCOUNT_TOKEN=
 CALLRAIL_ACCOUNT_ID=
+
+GOOGLE_ADS_AUTH_TOKEN=
+
+HOOK_SLACK_PROLOCKSMITHS_ALERTS=
+HOOK_SLACK_PROLOCKSMITHS_ERRORS=
