--- a/DockerfileProd
+++ b/DockerfileProd
@@ -15,6 +15,7 @@ COPY Pipfile Pipfile.lock /code/
 # Install system dependencies and Python dependencies
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
+        nginx \
         nano \
         dumb-init \
         build-essential \
@@ -27,6 +28,9 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/* \
     && rm -f Pipfile Pipfile.lock
 
+# Create the nginx user
+RUN useradd -r -d /nonexistent -s /bin/false nginx
+
 # Copy the application code to the container
 COPY . /code/
 
@@ -36,8 +40,12 @@ WORKDIR /code/powerdispatcher
 # Collect static files for production
 RUN python manage.py collectstatic --noinput
 
+# Copy NGINX configuration
+COPY nginx/nginx.conf /etc/nginx/nginx.conf
+COPY nginx/default.conf /etc/nginx/conf.d/
+
 # Expose the port the app runs on
-EXPOSE 8000
+EXPOSE 80
 
 # Start the application using dumb-init for proper signal handling
 CMD ["dumb-init", "sh", "-c", "nginx && gunicorn --bind 0.0.0.0:8000 --timeout 500 service.wsgi:application"]
