Added fix nginx as a dependency to run github action

--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -6,6 +6,7 @@ on:
         paths:
             - "powerdispatcher/**"
             - "DockerfileProd"
+            - "nginx/**"
             - "Pipfile"
     pull_request:
         branches: ["main"]
