--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -10,6 +10,8 @@ on:
             - "Pipfile"
     pull_request:
         branches: ["main"]
+    workflow_dispatch:
+        branches: ["main"]
 
 jobs:
     build:
